[gd_scene load_steps=12 format=3 uid="uid://cakukkkdrgsrq"]

[ext_resource type="Script" path="res://scripts/computer/box/world_in_cube.gd" id="1_wmjqs"]
[ext_resource type="Script" path="res://scripts/computer/box/ref_cubes.gd" id="2_vq26t"]

[sub_resource type="World3D" id="World3D_46qol"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cutvi"]
sky_top_color = Color(0.258824, 0.643137, 0.933333, 1)
sky_horizon_color = Color(0.688235, 0.856863, 0.811765, 1)
ground_bottom_color = Color(0.494118, 0.784314, 0.313726, 1)
ground_horizon_color = Color(0.688235, 0.856863, 0.811765, 1)

[sub_resource type="Sky" id="Sky_armv4"]
sky_material = SubResource("ProceduralSkyMaterial_cutvi")

[sub_resource type="Environment" id="Environment_1hfjp"]
background_mode = 2
sky = SubResource("Sky_armv4")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_uqidc"]
resource_local_to_scene = true

[sub_resource type="BoxMesh" id="BoxMesh_umi5n"]
flip_faces = true
size = Vector3(5, 5, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yy10u"]
resource_local_to_scene = true
albedo_color = Color(0.678431, 0.596078, 0.356863, 1)

[sub_resource type="BoxMesh" id="BoxMesh_y4rv6"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="BoxMesh" id="BoxMesh_8gccn"]
resource_local_to_scene = true
size = Vector3(0.1, 0.1, 0.1)

[node name="WorldInCube" type="Node3D"]
script = ExtResource("1_wmjqs")

[node name="LeftPortalViewport" type="SubViewport" parent="."]
own_world_3d = true
world_3d = SubResource("World3D_46qol")
size = Vector2i(1824, 1840)
render_target_update_mode = 3

[node name="LeftCamera" type="Camera3D" parent="LeftPortalViewport"]
cull_mask = 1048559
h_offset = -0.034
fov = 98.3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="LeftPortalViewport"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="LeftPortalViewport"]
environment = SubResource("Environment_1hfjp")

[node name="RightPortalViewport" type="SubViewport" parent="LeftPortalViewport"]
size = Vector2i(1824, 1840)
render_target_update_mode = 3

[node name="RightCamera" type="Camera3D" parent="LeftPortalViewport/RightPortalViewport"]
cull_mask = 1048559
h_offset = 0.034
fov = 98.3

[node name="PortalReference" type="MeshInstance3D" parent="LeftPortalViewport"]
visible = false
mesh = SubResource("BoxMesh_uqidc")

[node name="Helper" type="Node3D" parent="LeftPortalViewport/PortalReference"]

[node name="Cube" type="MeshInstance3D" parent="LeftPortalViewport"]
cast_shadow = 0
mesh = SubResource("BoxMesh_umi5n")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_yy10u")

[node name="Pokemon" type="Node3D" parent="LeftPortalViewport"]

[node name="RefCubes" type="Node3D" parent="LeftPortalViewport"]
script = ExtResource("2_vq26t")

[node name="ReferenceCube0" type="MeshInstance3D" parent="LeftPortalViewport/RefCubes"]
mesh = SubResource("BoxMesh_y4rv6")
skeleton = NodePath("../../PortalReference")

[node name="ReferenceCube1" type="MeshInstance3D" parent="LeftPortalViewport/RefCubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
mesh = SubResource("BoxMesh_8gccn")
skeleton = NodePath("../../PortalReference")

[node name="ReferenceCube2" type="MeshInstance3D" parent="LeftPortalViewport/RefCubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_y4rv6")
skeleton = NodePath("../../PortalReference")

[node name="ReferenceCube3" type="MeshInstance3D" parent="LeftPortalViewport/RefCubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
mesh = SubResource("BoxMesh_y4rv6")
skeleton = NodePath("../../PortalReference")

[node name="ReferenceCube4" type="MeshInstance3D" parent="LeftPortalViewport/RefCubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
mesh = SubResource("BoxMesh_y4rv6")
skeleton = NodePath("../../PortalReference")

[node name="ReferenceCube5" type="MeshInstance3D" parent="LeftPortalViewport/RefCubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_y4rv6")
skeleton = NodePath("../../PortalReference")

[node name="ReferenceCube6" type="MeshInstance3D" parent="LeftPortalViewport/RefCubes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
mesh = SubResource("BoxMesh_y4rv6")
skeleton = NodePath("../../PortalReference")
